pkg/kgateway/translator/gateway/testutils/inputs/tls-routing/multi-tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: tls
    protocol: TLS
    hostname: "*.example.com"
    tls:
      mode: Passthrough
    port: 8443
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: example-tls-route-1
  creationTimestamp: "2023-01-01T00:00:00Z"
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "foo.example.com"
  rules:
  - backendRefs:
    - name: example-tls-svc-1
      port: 443
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: example-tls-route-2
  creationTimestamp: "2023-01-02T00:00:00Z"
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "bar.example.com"
  rules:
  - backendRefs:
    - name: example-tls-svc-2
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: example-tls-svc-1
spec:
  selector:
    app: example1
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: example-tls-svc-2
spec:
  selector:
    app: example2
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
